trunk/Archive2/9d/f5bbdb7c22fb46/output
+ clang++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp:51:9: error: array type 'int [7]' is not assignable
    arr = {1,2,3,2,6,3,1};
    ~~~ ^
1 error generated.
